# Indata-Sudoku

./: CMakeCache.txt  CMakeLists.txt  Indata-sudoku walkthrough.mkv  Input_Clue.txt  MakeFile  MakeFile.txt  Makefile  README.md  a.out  all.out  cmake_install.cmake  constraint.h  datasudoku.h  indatasudoku_test.cpp  sudoku.cpp  sudokuMain
.github/workflows/: CI-Cmake.yml  Valgrind.yml  c-cpp.yml  c-cpp.yml.yml  cppcheck.yml  unit-test.yml
